# Orga_Comp_Q5_Evaluaciones

Examen1/: Ejercicio2_examen.S
Prueba1_P5_2019/Ejer1/: Ejer1.v  Ejer1_tb.v  mips32_opcodes.vh  run_test.sh
Prueba1_P5_2019/Ejer2/: Ejer2.v  Ejer2_tb.v  run_test.sh
Prueba2_P5_2019/: README-Part2.md
Prueba2_P5_2019/Ejercicio1/: CMakeLists.txt  PCEncoder.v  README.txt
Prueba2_P5_2019/Ejercicio2/: CMakeLists.txt  MemEncoder.v  README.txt
